--- a/ui/styles.scss
+++ b/ui/styles.scss
@@ -32,15 +32,18 @@ body {
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
 }
 
-body::before {
+.form::before {
   content: "";
   position: absolute;
   width: 100%;
   height: 100%;
   top: 0;
   left: 0;
+  right: 0;
+  bottom: 0;
 
   background: repeating-linear-gradient(
     to bottom,
@@ -63,22 +66,24 @@ body::before {
 
 .wrapper {
   width: 100%;
-  max-width: 600px;
+  max-width: 1000px;
+  padding: 24px 36px;
 
   .container {
     position: relative;
     margin-bottom: 1rem;
-    left: -457px;
   }
 }
 
 .glitch {
   color: var(--blue);
-  font-size: 9vw;
+  font-size: 12.5rem;
   animation: glitch-2 5s 5s infinite;
 }
 
-.glitch::before {
+.glitch::before,
+.pre::before
+{
   content: attr(data-text);
   position: absolute;
   left: -2px;
@@ -89,7 +94,9 @@ body::before {
     glitch-2 5s 5.05s infinite;
 }
 
-.glitch::after {
+.glitch::after,
+.pre::after
+ {
   content: attr(data-text);
   position: absolute;
   left: 2px;
@@ -148,10 +155,9 @@ body::before {
   letter-spacing: 1em;
   text-align: center;
   position: absolute;
-  left: 1311px;
   animation: glitch-2 5s 5.02s infinite;
   opacity: 0.5;
-  right: -900px;
+  right: -360px;
   bottom: 0;
 }
 
@@ -176,6 +182,7 @@ body::before {
   opacity: 0.5;
   background-color: #000;
   border-color: var(--neon-white);
+  margin-bottom: 24px;
 }
 
 .input:focus-visible {
@@ -184,13 +191,18 @@ body::before {
 
 .btns {
   display: flex;
+  justify-content: center;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .buttons {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 250px;
+  width: 100%;
   border: 0;
   outline: none;
   background-color: var(--black);
@@ -203,6 +215,7 @@ body::before {
   font-family: "cbpunk";
   font-size: 0.85rem;
   text-transform: uppercase;
+  margin-right: 24px;
 }
 
 .buttons,
@@ -311,4 +324,18 @@ body::before {
     height: 86px;
     line-height: 88px;
   }
+}
+
+.pre {
+  max-width: 100%;
+  overflow: scroll;
+  padding: 12px 24px;
+  margin-top: 24px;
+  background-color: var(--black);
+  border: 1px solid var(--blue);
+  color: var(--neon-white);
+  white-space: pre;
+  font-family: monospace;
+  mix-blend-mode:exclusion;
+  scrollbar-color: var(--blue);
 }
