--- a/ui/styles.scss
+++ b/ui/styles.scss
@@ -68,16 +68,20 @@ body {
   width: 100%;
   max-width: 1000px;
   padding: 24px 36px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 
   .container {
     position: relative;
     margin-bottom: 1rem;
+    width: fit-content;
   }
 }
 
 .glitch {
   color: var(--blue);
-  font-size: 12.5rem;
+  font-size: 12vw;
   animation: glitch-2 5s 5s infinite;
 }
 
@@ -190,12 +194,9 @@ body {
 }
 
 .btns {
-  display: flex;
-  justify-content: center;
-
-  &:last-child {
-    margin-right: 0;
-  }
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr;
 }
 
 .buttons {
@@ -216,6 +217,10 @@ body {
   font-size: 0.85rem;
   text-transform: uppercase;
   margin-right: 24px;
+
+  &:last-child {
+    margin-right: 0;
+  }
 }
 
 .buttons,
@@ -317,12 +322,10 @@ body {
   }
 }
 
-@media (min-width: 768px) {
-  .buttons,
-  .buttons:after {
-    width: 250px;
-    height: 86px;
-    line-height: 88px;
+@media (max-width: 850px) { 
+  .btns {
+    grid-template-rows: 1fr 1fr 1fr;
+    grid-template-columns: 1fr;
   }
 }
 
