--- a/ui/styles.scss
+++ b/ui/styles.scss
@@ -27,12 +27,8 @@ body {
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  overflow: hidden;
+  overflow: hidden scroll;
   mix-blend-mode: difference;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
 }
 
 .form::before {
@@ -66,15 +62,18 @@ body {
 
 .wrapper {
   width: 100%;
+  height: 100%;
   max-width: 1000px;
   padding: 24px 36px;
   display: flex;
-  flex-direction: column;
+  justify-content: center;
   align-items: center;
+  flex-direction: column;
+  margin: 0 auto;
 
   .container {
     position: relative;
-    margin-bottom: 1rem;
+    margin: 0 auto 1rem;
     width: fit-content;
   }
 }
@@ -203,7 +202,6 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
-  width: 100%;
   border: 0;
   outline: none;
   background-color: var(--black);
@@ -225,19 +223,14 @@ body {
 
 .buttons,
 .buttons:after {
-  // width: 150px;
-  // height: 76px;
-  // line-height: 78px;
-  font-size: 20px;
+  font-size: 1.5rem;
   font-family: "cbpunk";
   background: linear-gradient(45deg, transparent 5%, var(--red));
   border: 0;
   color: var(--blue);
-  // text-shadow: -2px 0 var(--red), -2px 0 var(--neon-white);
   letter-spacing: 3px;
   box-shadow: 6px 0px 0px #00e6f6;
   outline: transparent;
-  // position: absolute;
   user-select: none;
   -webkit-user-select: none;
   touch-action: manipulation;
@@ -322,15 +315,21 @@ body {
   }
 }
 
-@media (max-width: 850px) { 
+@media (max-width: 1150px) { 
   .btns {
     grid-template-rows: 1fr 1fr 1fr;
     grid-template-columns: 1fr;
   }
+
+  .buttons {
+    margin-right: 0;
+  }
 }
 
 .pre {
-  max-width: 100%;
+  max-width: 65%;
+  height: 200px;
+  width: 600px;
   overflow: scroll;
   padding: 12px 24px;
   margin-top: 24px;
