--- a/ui/styles.scss
+++ b/ui/styles.scss
@@ -11,6 +11,10 @@
   --neon-white: #fbffff;
 }
 
+html {
+  overflow: hidden;
+}
+
 html,
 body {
   padding: 0;
@@ -61,8 +65,6 @@ body {
 }
 
 .wrapper {
-  width: 100%;
-  height: 100%;
   max-width: 1000px;
   padding: 24px 36px;
   display: flex;
